Updated Installation Guide